# smolphone

./: Cargo.toml  README.md
butler/: Cargo.toml  bench  justfile
butler/.cargo/: config.toml
butler/src/: main.rs
legacy_matmul/: Cargo.toml
legacy_matmul/.cargo/: config.toml
legacy_matmul/src/: main.rs
offloaded_matmul/: Cargo.toml
offloaded_mepo/: Cargo.toml
offloaded_mepo/src/: main.rs
